# mishadiplom

./: .gitignore  AGENTS.md  README.md  pyproject.toml
experiments/: drive_portfolio_optimization.ipynb  synthetic_bayesian.ipynb
experiments/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
experiments/catboost_info/learn/: events.out.tfevents
