[project]
name = "masters-diploma"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pymc (>=5.21.1,<6.0.0)",
    "pymoo (>=0.6.1.3,<0.7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "numpyro (>=0.18.0,<0.19.0)",
    "blackjax (>=1.2.5,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "lifelines (>=0.30.0,<0.31.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "boruta (>=0.4.3,<0.5.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "google-search-results (>=2.4.2,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "lxml (>=5.4.0,<6.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "scikit-survival (>=0.24.1,<0.25.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "missingno (>=0.5.2,<0.6.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

